--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "homepage": "http://app.gifter.ly",
-  "proxy": "http://localhost:80",
   "private": true,
   "dependencies": {
     "@createnl/grouped-checkboxes": "^1.3.0",
@@ -20,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "emoji-mart": "^3.0.1",
+    "framer-motion": "^6.3.13",
     "gapi-script": "^1.2.0",
     "google-auth-library": "^8.0.2",
     "next-auth": "^4.3.4",
